--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,14 @@
 name: Test
 
-on: [ push, pull_request, workflow_dispatch ]
+on: [ push, pull_request ]
 
 jobs:
   test:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
         python-version: [ 3.8 ]
 
     steps:
